Improved versatility of possible weather icon styling. Improved searchbar styling and search button styling. Improved functionality of search bar by including the option to search by state or zip code. Improved format of date display and improved its functionality by updating the date to be acurate to the location searched.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div> 
         
         <div id="search-div">
-            <input class='search-box' type="text" autocomplete="off" autocapitalize="on" placeholder="Search for city..."/>
-            <button id="search-button">Search</button>
+            <input class='search-box' type="text" autocomplete="off" autocapitalize="on" placeholder="Search by city, state, or zip code..."/>
+            <img id="button" src="./src/search-icon.png"></img>
         </div>
 
         <div id="hourly-dropdown-div">
