Added errors for when humidity and temperature data fails to properly load.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <canvas id="hourly-dropdown"></canvas>
         </div>
 
+        <div id="temp-error" class="error-popup">Whoops! Looks like we couldn't retrieve some temperature data. Sorry for the inconvenience!</div>
+        <div id="humidity-error" class="error-popup">Whoops! Looks like we couldn't retrieve some humidity data. Sorry for the inconvenience!</div>
+
         <div id="weather-div">
             <p id="weather">Loading...</p> 
             <img id='weather-icon' src="http://pa1.narvii.com/7813/e598d92f03ba176a084201b29cc5b544ca1722f7r1-200-200_00.gif" alt="">
